# agentsense

./: .gitignore  Cargo.toml  LICENSE  README.md  check_icons.ps1  config.example.toml  encode_icons.ps1  start_server.ps1  test_api.ps1  test_glm_api.ps1
.github/workflows/: ci.yml
docs/plans/: 2026-05-27-multi-account-implementation.md
docs/specs/: 2026-05-26-multi-account-ui-fix-design.md
src/: config.rs  engine.rs  epub.rs  error.rs  lib.rs  main.rs  types.rs
src/quota/: claude.rs  db.rs  deepseek.rs  deepseek_platform.rs  mimo.rs  minimax.rs  mod.rs  zai.rs
src/server/: handlers.rs  mod.rs
src/server/handlers/: mod.rs  psu.rs
tests/: api_integration_tests.rs  epub_tests.rs  pdf_tests.rs  quota_db_tests.rs
tests/fixtures/: test_book.epub
web/: app.js  index.html  style.css
