[package]
name = "agentsense"
version = "0.1.0"
edition = "2021"
description = "AgentSense — ExoMind 感知基础设施的核心库，提供统一的文档解析、搜索聚合、视觉理解能力"
license = "MIT"
repository = "https://github.com/exomind-team/agentsense"
authors = ["HailayLin", "ExoMind Team"]

[dependencies]
lopdf = "0.34"
pdf-extract = "0.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["pure-rust"]
pure-rust = []
